# global-steel-designer

./: .gitignore  PLAN_UI_REDESIGN.md  README.md  aisc360_b4_section_classification.py  aisc360_master_engine_and_audit_v2.py  app.py  build.py  download  profiles.csv  pyproject.toml  requirements.txt  section_properties_calculator.py  section_warping_and_shear_center.py
.streamlit/: config.toml
src/steeldesigner/: app.py
src/steeldesigner/catalog/: catalog.py  comparator.py  drawer.py  editor.py  models.py  normalizer.py  repository.py
src/steeldesigner/catalog/migrations/: 001_initial.sql  002_seed_families_materials.sql  003_fix_subclass_null_unique.sql  004_dedupe_cross_source.sql  005_fix_unit_conversion.sql  006_derive_section_moduli.sql  007_fix_hss_c_ry.sql  008_fix_w_sack_columns.sql  __init__.py  runner.py
src/steeldesigner/core/: aisc360_engine.py  angle_compression.py  engine_facade.py  section_adapter.py  section_geometry.py  torsion_chapter_h3.py
src/steeldesigner/resources/: catalog.db
src/steeldesigner/sap2000/: sap2000_oapi.py  sap2000_worker.py
src/steeldesigner/ui/: main_window.py  theme.py
src/steeldesigner/ui/pages/: catalogue_page.py  design_page.py  results_page.py
src/steeldesigner/ui/widgets/: card.py  collapsible_section.py  demanda_delegate.py  section_canvas.py  status_indicator.py
